@@ -2627,6 +2627,7 @@ $wgSpecialPageGroups = array(
 	'Wantedcategories'          => 'maintenance',
 	'Unwatchedpages'            => 'maintenance',
 	'Fewestrevisions'           => 'maintenance',
+	'MissingFiles'				=> 'maintenance',
 
 	'Userlogin'                 => 'login',
 	'Userlogout'                => 'login',
