@@ -1203,6 +1203,10 @@ $wgMessageStructure = array(
 		'wantedcategories-summary',
 		'wantedpages',
 		'wantedpages-summary',
+		'missingfiles',
+		'missingfiles-summary',
+		'missingimages',
+		'missingimages-summary',
 		'mostlinked',
 		'mostlinked-summary',
 		'mostlinkedcategories',
